src/test/ui/error-codes/E0057.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/E0057.rs:3:13
   |
LL |     let a = f();
   |             ^^^ an argument of type _ is missing
   |
help: provide the argument
   |
LL |     let a = ({_});
   |             ^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/E0057.rs:5:13
   |
LL |     let c = f(2, 3);
   |             ^^-^^^^
   |               |
   |               argument of type {integer} unexpected
   |
help: remove the extra argument
   |
LL |     let c = (2);
   |             ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
